# graphql-idl-parser

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md
graphql-idl-parser-ffi/: Cargo.toml  README.md
graphql-idl-parser-ffi/example/: example.c  main.c
graphql-idl-parser-ffi/include/: gql-idl-parser.h
graphql-idl-parser-ffi/includes/: gql-idl-parser.h
graphql-idl-parser-ffi/src/: lib.rs  types.rs
graphql-idl-parser-ffi/test/: basic.c  clar.c  clar.h  clar_test.h  enums.c  generate.py  helpers.c  helpers.h  input_objects.c  interfaces.c  main.c  objects.c  scalars.c  unions.c
graphql-idl-parser-ffi/test/clar/: fixtures.h  fs.h  print.h  sandbox.h
script/: compile  fmt  test
src/: ast.rs  gqlidl.lalrpop  gqlidl.rs  lib.rs  macros.rs  tests.rs  type_definition.rs
test/: basic.graphql  enums.graphql  file.graphql  github.graphql  input_objects.graphql  interfaces.graphql  objects.graphql  schema.graphql  unions.graphql
