[package]
name = "graphql-idl-parser"
version = "0.0.1"
authors = ["Garen Torikian <gjtorikian@gmail.com>"]
build = "build.rs"
description = "A GraphQL IDL parser"
license = "MIT"
repository = "https://github.com/gjtorikian/graphql-idl-parser"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
lalrpop = "0.13.0"

[dependencies]
lalrpop-util = "0.13.0"
regex = "0.2.1"
