[package]
name = "graphql-idl-parser-ffi"
version = "0.1.0"
repository = "https://github.com/gjtorikian/graphql-idl-parser"
license = "MIT"
authors = ["Garen Torikian <gjtorikian@gmail.com>"]
description = "An FFI interface for the GraphQL IDL format parser."

[lib]
name = "graphqlidlparser"
crate_type = ["dylib"]

[dependencies]
graphql-idl-parser = { version = "0.1.0", path = "../" }
libc = "^0.2"

[workspace]
exclude = ["example"]
