[package]
name = "graphql-idl-parser-ffi"
version = "0.1.3"
repository = "https://github.com/gjtorikian/graphql-idl-parser"
license = "MIT"
authors = ["Garen Torikian <gjtorikian@gmail.com>"]
description = "An FFI interface for the GraphQL IDL format parser."

[lib]
name = "graphqlidlparser"
crate_type = ["dylib"]

[dependencies]
graphql-idl-parser = "0.1.1"
libc = "^0.2"

[workspace]
exclude = ["example"]
